lesson5/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  namespace: homework
  name: ingress

  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  ingressClassName: nginx
  rules:
    - host: "homework.otus"
      http:
        paths:
        - path: /
          pathType: ImplementationSpecific
          backend: 
            service:
              name: web-server-service
              port:
                number: 8000
